--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/ejemplo
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://dpg-cuh9itrtq21c73f91j3g-a.oregon-postgres.render.com/ejemplo_uyai
+spring.datasource.username=root
+spring.datasource.password=DsU39sUHRAC6qR6lL8yqxDNiqXBvvyzb
