--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=demo
+server.tomcat.accesslog.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://dpg-cuh9itrtq21c73f91j3g-a.oregon-postgres.render.com/ejemplo_uyai
 spring.datasource.username=root
 spring.datasource.password=DsU39sUHRAC6qR6lL8yqxDNiqXBvvyzb
