--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,5 @@ server.tomcat.accesslog.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://dpg-cuh9itrtq21c73f91j3g-a.oregon-postgres.render.com/ejemplo_uyai
-spring.datasource.username=root
-spring.datasource.password=DsU39sUHRAC6qR6lL8yqxDNiqXBvvyzb
+spring.datasource.url=jdbc:postgresql://dpg-cuha1jd2ng1s73aihsug-a.oregon-postgres.render.com/ejemplo_7k8e
+spring.datasource.username=ejemplo_bd
