--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 server.tomcat.accesslog.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-
+server.port = 8090
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://dpg-cuha1jd2ng1s73aihsug-a.oregon-postgres.render.com/ejemplo_7k8e
 spring.datasource.username=ejemplo_bd
