--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ server.tomcat.accesslog.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 server.port = 8090
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://dpg-cuha1jd2ng1s73aihsug-a.oregon-postgres.render.com/ejemplo_7k8e
+
+spring.datasource.url=jdbc:postgresql://dpg-cuha1jd2ng1s73aihsug-a:5432/ejemplo_7k8e
 spring.datasource.username=ejemplo_bd
