--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=demo
-server.tomcat.accesslog.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-server.port = 8090
-spring.jpa.show-sql=true
+# Configuración de la base de datos
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-spring.datasource.url=jdbc:postgresql://dpg-cuha1jd2ng1s73aihsug-a:5432/ejemplo_7k8e
-spring.datasource.username=ejemplo_bd
+# Configuración de Hibernate/JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
